// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-daBunf fUeVXU sc-jUfyBS cBAbVR"
      color="#fff"
    >
      <div
        class="sc-hOPeYd cjTBkL"
      >
        10
        %
      </div>
      <div
        class="sc-kHWWYL hsReWJ"
        style="width: 10%;"
      >
        <div
          class="sc-dsXzNU CFDim"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-daBunf fUeVXU sc-jUfyBS cBAbVR"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-hOPeYd cjTBkL"
      >
        10
        %
      </div>
      <div
        class="sc-kHWWYL iIbyTr"
        style="width: 10%;"
      >
        <div
          class="sc-dsXzNU CFDim"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-daBunf hIFTsZ sc-jUfyBS cBAbVR"
      color="#fff"
    >
      <div
        class="sc-hOPeYd cjTBkL"
      >
        10
        %
      </div>
      <div
        class="sc-kHWWYL hsReWJ"
        style="width: 10%;"
      >
        <div
          class="sc-dsXzNU CFDim"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
